--- a/resources/assets/sass/partials/_navigation.scss
+++ b/resources/assets/sass/partials/_navigation.scss
@@ -4,6 +4,21 @@
  *    Dropdowns / Toolbars / Navigation
  */
 
+
+/*
+ * Dashboard menu
+ */
+.dashboard-menu {
+    .dashboard-title {
+        margin: 30px auto;
+
+        h1 {
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+    }
+}
+
 /*
  * Dropdown menus
  */
