--- a/resources/assets/sass/fonts/proxima.scss
+++ b/resources/assets/sass/fonts/proxima.scss
@@ -1,39 +1,44 @@
+/**
+ * Copyright Heddoko(TM) 2015, all rights reserved.
+ *
+ * @author Francis Amankrah (frank@heddoko.com)
+ * @date   December 2015
+ */
+
+
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'Proxima Nova';
     font-style: normal;
     font-weight: 400;
-    src: local('Open Sans'),
-        local('OpenSans'),
-        url(http://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3VtXRa8TVwTICgirnJhmVJw.woff2)
-        format('woff2');
+    src: local('Proxima Nova Regular'), local('ProximaNova-Regular'),
+        url(/public/fonts/ProximaNova-Regular.eot) format('embedded-opentype'),
+        // url(/public/fonts/ProximaNova-Regular.woff2) format('woff2'),
+        url(/public/fonts/ProximaNova-Regular.woff) format('woff'),
+        url(/public/fonts/ProximaNova-Regular.ttf) format('truetype'),
+        url(/public/fonts/ProximaNova-Regular.svg) format('svg');
 }
+
 @font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 600;
-  src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(http://fonts.gstatic.com/s/opensans/v13/MTP_ySUJH_bn48VBG8sNSugdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
+    font-family: 'Proxima Nova Light';
+    font-style: normal;
+    font-weight: 300;
+    src: local('Proxima Nova Light'), local('ProximaNova-Light'),
+        url(/public/fonts/ProximaNova-Light.eot) format('embedded-opentype'),
+        // url(/public/fonts/ProximaNova-Light.woff2) format('woff2'),
+        url(/public/fonts/ProximaNova-Light.woff) format('woff'),
+        url(/public/fonts/ProximaNova-Light.ttf) format('truetype'),
+        url(/public/fonts/ProximaNova-Light.svg) format('svg');
 }
+
 @font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzOgdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Open Sans Italic'), local('OpenSans-Italic'), url(http://fonts.gstatic.com/s/opensans/v13/xjAJXh38I15wypJXxuGMBo4P5ICox8Kq3LLUNMylGO4.woff2) format('woff2');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 600;
-  src: local('Open Sans Semibold Italic'), local('OpenSans-SemiboldItalic'), url(http://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxl2umOyRU7PgRiv8DXcgJjk.woff2) format('woff2');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 700;
-  src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url(http://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxolIZu-HDpmDIZMigmsroc4.woff2) format('woff2');
+    font-family: 'Proxima Nova Bold';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Proxima Nova Bold'), local('ProximaNova-Bold'),
+        // url(/public/fonts/ProximaNova-Bold.eot) format('embedded-opentype'),
+        // url(/public/fonts/ProximaNova-Bold.woff2) format('woff2'),
+        // url(/public/fonts/ProximaNova-Bold.woff) format('woff'),
+        url(/public/fonts/ProximaNova-Bold.ttf) format('truetype'),
+        // url(/public/fonts/ProximaNova-Bold.svg) format('svg')
+        ;
 }
