Updated Proxima Nova font files

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -1,12 +1,11 @@
 /**
- *
  * Copyright Heddoko(TM) 2015, all rights reserved.
- *
  *
  */
 
 /* Base */
 @import 'partials/_variables.scss';
+@import 'fonts/proxima-nova.scss';
 @import 'partials/_general.scss';
 @import 'partials/_selectize.scss';
 @import 'partials/_header.scss';
