--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -56,39 +56,39 @@
         <!-- Live FMS pages. -->
         <li>
             <!-- TODO: Call this Live FMS? -->
-            <a href="#/fms/live">Movement Screen</a>
+            <a href="#/screening/live">Movement Screen</a>
 
             <!-- TODO: Use ng-repeat when ready -->
             <ul style="display: block">
                 <li>
-                    <a href="#/fms/live/ds"><span>Deep Squat</span></a>
+                    <a href="#/screening/live/ds"><span>Deep Squat</span></a>
                 </li>
                 <li>
-                    <a href="#/fms/live/hs"><span>Hurdle Step</span></a>
+                    <a href="#/screening/live/hs"><span>Hurdle Step</span></a>
                 </li>
                 <li>
-                    <a href="#/fms/live/il"><span>Inline Lunge</span></a>
+                    <a href="#/screening/live/il"><span>Inline Lunge</span></a>
                 </li>
                 <li>
-                    <a href="#/fms/live/sm"><span>Shoulder Mobility</span></a>
+                    <a href="#/screening/live/sm"><span>Shoulder Mobility</span></a>
                 </li>
                 <li>
-                    <a href="#/fms/live/sm"><span>Impingement (C. Test)</span></a>
+                    <a href="#/screening/live/sm"><span>Impingement (C. Test)</span></a>
                 </li>
                 <li>
-                    <a href="#/fms/demo/aslr"><span>Active Straight-Leg Raise</span></a>
+                    <a href="#/screening/demo/aslr"><span>Active Straight-Leg Raise</span></a>
                 </li>
                 <li>
-                    <a href="#/fms/live/tspu"><span>Trunk Stability Push-Up</span></a>
+                    <a href="#/screening/live/tspu"><span>Trunk Stability Push-Up</span></a>
                 </li>
                 <li>
-                    <a href="#/fms/live/pu"><span>Press-Up (C. Test)</span></a>
+                    <a href="#/screening/live/pu"><span>Press-Up (C. Test)</span></a>
                 </li>
                 <li>
-                    <a href="#/fms/live/rs"><span>Rotary Stability</span></a>
+                    <a href="#/screening/live/rs"><span>Rotary Stability</span></a>
                 </li>
                 <li>
-                    <a href="#/fms/live/ps"><span>Posterior Rocking (C. Test)</span></a>
+                    <a href="#/screening/live/ps"><span>Posterior Rocking (C. Test)</span></a>
                 </li>
             </ul>
         </li>
