--- a/resources/assets/sass/fonts/proxima-nova.scss
+++ b/resources/assets/sass/fonts/proxima-nova.scss
@@ -10,35 +10,38 @@
     font-family: 'Proxima Nova';
     font-style: normal;
     font-weight: 400;
+    src: url(/fonts/ProximaNova-Regular.eot);
     src: local('Proxima Nova Regular'), local('ProximaNova-Regular'),
-        url(/public/fonts/proxima/ProximaNova-Regular.eot) format('embedded-opentype'),
-        // url(/public/fonts/proxima/ProximaNova-Regular.woff2) format('woff2'),
-        url(/public/fonts/proxima/ProximaNova-Regular.woff) format('woff'),
-        url(/public/fonts/proxima/ProximaNova-Regular.ttf) format('truetype'),
-        url(/public/fonts/proxima/ProximaNova-Regular.svg) format('svg');
+        url(/fonts/ProximaNova-Regular.eot?#iefix) format('embedded-opentype'),
+        // url(/fonts/ProximaNova-Regular.woff2) format('woff2'),
+        url(/fonts/ProximaNova-Regular.woff) format('woff'),
+        url(/fonts/ProximaNova-Regular.ttf) format('truetype'),
+        url(/fonts/ProximaNova-Regular.svg) format('svg');
 }
 
 @font-face {
     font-family: 'Proxima Nova Light';
     font-style: normal;
     font-weight: 300;
+    src: url(/fonts/ProximaNova-Light.eot);
     src: local('Proxima Nova Light'), local('ProximaNova-Light'),
-        url(/public/fonts/proxima/ProximaNova-Light.eot) format('embedded-opentype'),
-        // url(/public/fonts/proxima/ProximaNova-Light.woff2) format('woff2'),
-        url(/public/fonts/proxima/ProximaNova-Light.woff) format('woff'),
-        url(/public/fonts/proxima/ProximaNova-Light.ttf) format('truetype'),
-        url(/public/fonts/proxima/ProximaNova-Light.svg) format('svg');
+        url(/fonts/ProximaNova-Light.eot?#iefix) format('embedded-opentype'),
+        // url(/fonts/ProximaNova-Light.woff2) format('woff2'),
+        url(/fonts/ProximaNova-Light.woff) format('woff'),
+        url(/fonts/ProximaNova-Light.ttf) format('truetype'),
+        url(/fonts/ProximaNova-Light.svg) format('svg');
 }
 
 @font-face {
     font-family: 'Proxima Nova Bold';
     font-style: normal;
     font-weight: 700;
+    src: url(/fonts/ProximaNova-Bold.eot);
     src: local('Proxima Nova Bold'), local('ProximaNova-Bold'),
-        // url(/public/fonts/proxima/ProximaNova-Bold.eot) format('embedded-opentype'),
-        // url(/public/fonts/proxima/ProximaNova-Bold.woff2) format('woff2'),
-        // url(/public/fonts/proxima/ProximaNova-Bold.woff) format('woff'),
-        url(/public/fonts/proxima/ProximaNova-Bold.ttf) format('truetype'),
-        // url(/public/fonts/proxima/ProximaNova-Bold.svg) format('svg')
+        url(/fonts/ProximaNova-Bold.eot?#iefix) format('embedded-opentype'),
+        url(/fonts/ProximaNova-Bold.woff2) format('woff2'),
+        url(/fonts/ProximaNova-Bold.woff) format('woff'),
+        url(/fonts/ProximaNova-Bold.ttf) format('truetype'),
+        url(/fonts/ProximaNova-Bold.svg#proxima_novabold) format('svg')
         ;
 }
