--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -29,6 +29,7 @@
 
 /* Directives */
 @import 'directives/ui-editable-fields.scss';
+@import 'directives/ui-explorer.scss';
 @import 'directives/ui-movement.scss';
 @import 'directives/ui-page-title.scss';
 @import 'directives/ui-taggable.scss';
