--- a/resources/assets/sass/directives/ui-explorer.scss
+++ b/resources/assets/sass/directives/ui-explorer.scss
@@ -5,7 +5,20 @@
 
 .ui-explorer-container {
 
+    header {
+        margin: 15px auto 0;
+    }
+
+    .ui-explorer-item {
+        display: block;
+        margin: 25px auto;
+        text-align: center;
+    }
+
     footer {
-        color: #ccc;
+        margin: 15px auto 0;
+        padding: 10px;
+        color: #999;
+        border-top: 1px solid #444;
     }
 }
