--- a/resources/assets/sass/directives/ui-explorer.scss
+++ b/resources/assets/sass/directives/ui-explorer.scss
@@ -6,7 +6,7 @@
 .ui-explorer-container {
 
     header {
-        margin: 15px auto 0;
+        margin: 25px auto;
     }
 
     .ui-explorer-item {
