--- a/resources/assets/sass/partials/_containers.scss
+++ b/resources/assets/sass/partials/_containers.scss
@@ -64,6 +64,42 @@
     margin: 10px;
 }
 
+/**
+ * File explorers
+ */
+.file-explorer-container {
+
+    header {
+        margin: 25px auto;
+    }
+
+    section {
+        .folder, .file {
+            display: block;
+            margin: 25px auto;
+            text-align: center;
+        }
+    }
+
+    .small-tiles-layout {
+        .folder, .file {
+            margin: 25px auto;
+            text-align: center;
+
+            .name {
+                display: block;
+            }
+        }
+    }
+
+    footer {
+        margin: 15px auto 0;
+        padding: 10px;
+        color: #999;
+        border-top: 1px solid #444;
+    }
+}
+
 /*
  * ...
  */
