--- a/resources/assets/sass/partials/_overlays.scss
+++ b/resources/assets/sass/partials/_overlays.scss
@@ -16,7 +16,7 @@
     bottom: 0;
     right: 0;
     overflow: hidden;
-    background: #ccc;
+    background: #eee;
     z-index: 1000;
     -webkit-perspective: 10000;
     -moz-perspective: 10000;
