Updated styles + re-organized hierarchy

--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -31,11 +31,52 @@
         <!-- List of movements -->
 		<li>
             <a href="#/movements"><span>Movements</span></a>
+
+            <ul style="display: block">
+                <li>
+                    <a href="#/movements">
+                        <span>Organize</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#/capture">
+                        <span>Record</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#/movements/upload">
+                        <span>Upload</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#/movements/analyze">
+                        <span>Analyze</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#/movements/compare">
+                        <span>Compare</span>
+                    </a>
+                </li>
+            </ul>
         </li>
 
-        <!-- Submit movement data form -->
+        <!-- Screenings -->
 		<li>
-            <a href="#/submit-movement"><span>Submit movement data</span></a>
+            <a href="#/screening"><span>Movement Tests</span></a>
+
+            <ul style="display: block">
+                <li>
+                    <a href="#/screening">
+                        <span>Results</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#/screening">
+                        <span>Create new</span>
+                    </a>
+                </li>
+            </ul>
         </li>
 
         <!-- Submit FMS test form -->
@@ -46,11 +87,6 @@
         <!-- FMS results page -->
 		<li>
             <a href="#/fmsresults"><span>fms results</span></a>
-		</li>
-
-        <!-- Comparison -->
-		<li>
-            <a href="#/compare"><span>Compare</span></a>
 		</li>
 
         <!-- Live FMS pages. -->
