--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -7,33 +7,65 @@
 /*
  * Angular - Dashbaord
  */
-.dashboard-page .bookmark-wrapper {
-    margin: 0 5%;
+.dashboard.page {
+    .bookmark-wrapper {
+        margin: 0 5%;
+    }
+    .bookmark-wrapper a {
+        display: block;
+    }
+    .bookmarks .fa,
+    .bookmarks span {
+        display: block;
+        text-align: center;
+    }
+    .bookmarks .fa {
+        padding: 30px 0 10px;
+    }
+    .bookmarks span:first-child {
+        padding: 20px 0 30px;
+        text-transform: uppercase;
+    }
+    .bookmarks .bookmark-bottom {
+        height: 5px;
+        width: 60%;
+        margin: 20px auto 0;
+        background-color: #fff;
+        @include transition(background-color .2s);
+    }
+    .bookmarks a:hover .bookmark-bottom {
+        background-color: $heddokogreen;
+    }
 }
-.dashboard-page .bookmark-wrapper a {
-    display: block;
-}
-.dashboard-page .bookmarks .fa,
-.dashboard-page .bookmarks span {
-    display: block;
-    text-align: center;
-}
-.dashboard-page .bookmarks .fa {
-    padding: 30px 0 10px;
-}
-.dashboard-page .bookmarks span:first-child {
-    padding: 20px 0 30px;
-    text-transform: uppercase;
-}
-.dashboard-page .bookmarks .bookmark-bottom {
-    height: 5px;
-    width: 60%;
-    margin: 20px auto 0;
-    background-color: #fff;
-    @include transition(background-color .2s);
-}
-.dashboard-page .bookmarks a:hover .bookmark-bottom {
-    background-color: $heddokogreen;
+
+/**
+ * Angular - Page headers.
+ */
+.page > header {
+    margin: 0 20px 20px;
+
+    h1 {
+        margin: none;
+        display: inline-block;
+        text-transform: uppercase;
+
+        .fa {
+            font-size: 0.9em;
+            margin: auto 10px;
+        }
+
+        span {
+            margin: 10px 0 0;
+            display: block;
+            width: 50%;
+            height: 4px;
+            background-color: $text-color;
+        }
+    }
+
+    .btn-toolbar.pull-right {
+        margin: 20px auto;
+    }
 }
 
 /*
