--- a/resources/angular-views/partials/header.html
+++ b/resources/angular-views/partials/header.html
@@ -32,81 +32,46 @@
                     </selectize>
                 </div>
             </li>
+
+            <!-- App settings -->
             <li>
-                <div class="btn-group">
+                <a
+                    href="#/config"
+                    class="onboarding-general"
+                    data-step="4"
+                    data-intro="Click this button to modify your app settings">
 
-                    <!-- Dev -->
-                    <div ng-show="global.isLocal" class="btn-group">
+                    <i class="fa fa-cogs fa-fw"></i>
+                    <span>Settings</span>
+                </a>
+            </li>
 
-                        <!-- Face of dropdown -->
-                        <button
-                            type="button"
-                            class="btn btn-default dropdown-toggle"
-                            data-toggle="dropdown"
-                            aria-haspopup="true"
-                            aria-expanded="false">
+            <!-- Onboarding -->
+            <li>
+                <a
+                    ng-click="global.onboarding.general()"
+                    href="javascript:;"
+                    class="onboarding-general"
+                    data-step="6"
+                    data-intro="Click here whenever you want to see this again">
 
-                            <i class="fa fa-code"></i>
-                        </button>
+                    <i class="fa fa-question fa-fw"></i>
+                    <span>Help</span>
+                </a>
+            </li>
 
-                        <!-- Contents of dropdown -->
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="javascript:;">
-                                    Total groups: {{ global.state.group.list.length }} /
-                                    Selected: {{ global.getSelectedGroup().name || 'None' }}
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:;">
-                                    Total profiles: {{ global.state.profile.list.length }} /
-                                    Selected (callback): {{ global.getSelectedProfile().first_name || 'None' }} /
-                                    Selected (local): {{ global.store.profileId }}
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:;"data-toggle="modal" data-target="#overlay-screen">
-                                    Overlay Test
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+            <!-- Sign out -->
+            <li>
+                <a
+                    ng-click="global.endSession()"
+                    href="javascript:;"
+                    class="onboarding-general"
+                    data-step="5"
+                    data-intro="Use this button when you're ready to log out">
 
-                    <!-- Settings -->
-                    <button
-                        ng-click="global.browseTo.path('/config')"
-                        class="btn btn-default onboarding-general"
-                        data-step="4"
-                        data-intro="Click this button to modify your app settings">
-
-                        <i class="fa fa-cogs fa-fw"></i>
-                    </button>
-
-                    <!-- Onboarding -->
-                    <button
-                        ng-click="global.onboarding.general()"
-                        type="button"
-                        class="btn btn-default onboarding-general"
-                        data-step="6"
-                        data-intro="Click here whenever you want to see this again">
-
-                        <i class="fa fa-question fa-fw"></i>
-                    </button>
-
-                    <!-- Sign out -->
-                    <button
-                        ng-click="global.endSession()"
-                        type="button"
-                        class="btn btn-logout onboarding-general"
-                        data-toggle="tooltip"
-                        data-placement="bottom"
-                        data-step="5"
-                        data-intro="Use this button when you're ready to log out"
-                        title="Logout">
-
-                        <i class="fa fa-sign-out fa-fw"></i>
-                    </button>
-                </div>
+                    <i class="fa fa-sign-out fa-fw"></i>
+                    <span>Log out</span>
+                </a>
             </li>
         </ul>
 
