--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -68,12 +68,12 @@
             <ul style="display: block">
                 <li>
                     <a href="#/screening">
-                        <span>Results</span>
+                        <span>Record or Upload</span>
                     </a>
                 </li>
                 <li>
                     <a href="#/screening">
-                        <span>Create new</span>
+                        <span>Results</span>
                     </a>
                 </li>
             </ul>
