Created screenings screens + added detailed layout for recent movements screen

--- a/resources/angular-views/movements/explorer/partials/large-tiles-layout.html
+++ b/resources/angular-views/movements/explorer/partials/large-tiles-layout.html
@@ -104,6 +104,6 @@
         <br>
         <br>
 
-        Start by <b><a href="#/import">importing</a></b> your own movements.
+        Start by <b><a href="#/movements/upload">importing</a></b> your own movements.
     </div>
 </div>
