--- a/resources/angular-views/movements/explorer/partials/small-tiles-layout.html
+++ b/resources/angular-views/movements/explorer/partials/small-tiles-layout.html
@@ -42,6 +42,6 @@
         Once you upload or capture a new movement, it will show up here.
         <br>
 
-        Start by <b><a href="#/import">importing</a></b> your own movements.
+        Start by <b><a href="#/movements/upload">importing</a></b> your own movements.
     </div>
 </div>
