--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -1,4 +1,6 @@
 
+<!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
+
 <div class="logo">
     <div class="logo-container">
         <img src="../../images/logo/heddoko_logo_1.svg" alt="Heddoko" class="logo1">
@@ -67,12 +69,17 @@
 
             <ul style="display: block">
                 <li>
-                    <a href="#/screening">
+                    <a href="#/screenings">
+                        <span>View Tests</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#/screenings/create">
                         <span>Record or Upload</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#/screening">
+                    <a href="#/screenings/results">
                         <span>Results</span>
                     </a>
                 </li>
