--- a/resources/assets/sass/partials/_buttons.scss
+++ b/resources/assets/sass/partials/_buttons.scss
@@ -1,10 +1,41 @@
 /**
- *
  * Copyright Heddoko(TM) 2015, all rights reserved.
  *
- *
- *        Buttons and Links
  */
+
+/*
+ * Dashboard-style buttons
+ */
+.btn-dashboard {
+    display: block;
+
+    .fa, span {
+        display: block;
+        text-align: center;
+    }
+    
+    .fa {
+        padding: 30px 0 10px;
+    }
+
+    span:first-child {
+        padding: 20px 0 30px;
+        text-transform: uppercase;
+    }
+
+    span:last-child {
+        height: 5px;
+        width: 60%;
+        margin: 20px auto 0;
+        background-color: #fff;
+        @include transition(background-color .2s);
+    }
+
+    &:hover span:last-child {
+        background-color: $heddokogreen;
+    }
+}
+
 
 .btn {
     display: inline-block;
