--- a/resources/angular-views/partials/breadcrumbs.html
+++ b/resources/angular-views/partials/breadcrumbs.html
@@ -1,4 +1,6 @@
 
+<!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
+
 <ol class="breadcrumb-alt">
     <li>
         <a class="active" href="#/dashboard">
