--- a/resources/assets/sass/partials/_containers.scss
+++ b/resources/assets/sass/partials/_containers.scss
@@ -84,6 +84,15 @@
         }
     }
 
+    .details-layout {
+        .header {
+            margin-bottom: 15px;
+            padding: 10px;
+            color: #999;
+            border-bottom: 1px solid #444;
+        }
+    }
+
     .small-tiles-layout {
         .folder, .file {
             margin: 25px auto;
