--- a/resources/assets/sass/partials/_general.scss
+++ b/resources/assets/sass/partials/_general.scss
@@ -90,6 +90,15 @@ p.medium {
     font-size: 12px;
 }
 
+h1 small, .h1 small, h1 .small, .h1 .small,
+h2 small, .h2 small, h2 .small, .h2 .small,
+h3 small, .h3 small, h3 .small, .h3 .small,
+h4 small, .h4 small, h4 .small, .h4 .small,
+h5 small, .h5 small, h5 .small, .h5 .small,
+h6 small, .h6 small, h6 .small, .h6 .small, {
+    color: #999;
+}
+
 h4, .h4 {
   border-bottom: 1px solid #e5e5e5;
   padding-bottom: 10px;
