Changed icons for recent movements screen

--- a/resources/angular-views/movements/explorer/partials/details-layout.html
+++ b/resources/angular-views/movements/explorer/partials/details-layout.html
@@ -30,7 +30,7 @@
         <!-- Title -->
         <div class="col-xs-10 col-xs-offset-2 col-md-11 col-md-offset-1">
             <a href="{{ parentFolder.href }}">
-                <i class="fa fa-hand-o-left fa-fw"></i> Parent Folder
+                <i class="fa fa-level-up"></i> Parent Folder
             </a>
         </div>
     </div>
