--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -69,18 +69,13 @@
 
             <ul style="display: block">
                 <li>
-                    <a href="#/screenings">
-                        <span>View Tests</span>
-                    </a>
-                </li>
-                <li>
                     <a href="#/screenings/create">
                         <span>Record or Upload</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#/screenings/results">
-                        <span>Results</span>
+                    <a href="#/screenings">
+                        <span>View Results</span>
                     </a>
                 </li>
             </ul>
