--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -69,7 +69,7 @@
 
             <ul style="display: block">
                 <li>
-                    <a href="#/screenings/create">
+                    <a href="#/screenings/live">
                         <span>Record or Upload</span>
                     </a>
                 </li>
