--- a/resources/angular-views/screenings/view/index.html
+++ b/resources/angular-views/screenings/view/index.html
@@ -4,28 +4,47 @@
 <div class="page">
     <header>
         <h1>
-            <abbr title="Functional Movement Test">FMT</abbr> Report
+            <abbr title="Functional Movement Test">FMT</abbr> Report <i class="fa fa-list-alt"></i>
             <span></span>
         </h1>
 
         <!-- Append profile name to page title -->
-        <div ng-show="global.getSelectedProfile().id > 0" class="h1-append">
-            for
-            <a ng-click="global.store.profileId = 0" href="javascript:;">
-                {{ global.getSelectedProfile().firstName }}
-                {{ global.getSelectedProfile().lastName }}
-                <i class="fa fa-refresh"></i>
-            </a>
+        <div ng-show="screeningProfile.id > 0" class="h1-append">
+            {{ screeningProfile.firstName }}
+            {{ screeningProfile.lastName }}
         </div>
     </header>
 
-    <div ng-show="global.getSelectedProfile().id > 0">
+    <!-- Screening results -->
+    <div ng-show="screening.id > 0" class="text-center">
+
+        <button class="btn btn-default">
+            Test Score Table
+        </button>
+        <br>
+        <br>
+
+        <button class="btn btn-default">
+            Test Score Graph
+        </button>
+        <br>
+        <br>
+
+        <button class="btn btn-default">
+            Mobility Summary
+        </button>
+        <br>
+        <br>
+        <br>
+
+        <a href="javascript:;">
+            <i class="fa fa-angle-double-down fa-2x"></i>
+        </a>
+    </div>
+
+    <div ng-show="screening.id === 0">
         <h2 style="text-align: center; color: #ccc;">
             In Development
         </h2>
-    </div>
-
-    <div ng-show="global.getSelectedProfile().id === 0">
-        <div ng-include="'partials/select-profile.html'"></div>
     </div>
 </div>
