--- a/resources/angular-views/movements/explorer/partials/large-tiles-layout.html
+++ b/resources/angular-views/movements/explorer/partials/large-tiles-layout.html
@@ -18,7 +18,7 @@
         <a href="{{ folder.href }}" class="folder">
             <i class="fa fa-folder-open fa-3x"></i>
             <span class="name">
-                {{ folder.name }}
+                {{ folder.name | characters:25 }}
             </span>
         </a>
     </div>
@@ -41,7 +41,7 @@
 
                     <!-- Movement title -->
                     <span style="color: #999">
-                        {{ movement.title }}
+                        {{ movement.title | characters:25 }}
                     </span>
 
                     <!-- Movement actions -->
