--- a/resources/angular-views/partials/header.html
+++ b/resources/angular-views/partials/header.html
@@ -17,6 +17,41 @@
                     <i class="fa fa-bars"></i>
                 </a>
 			</li>
+
+            <!-- Account -->
+            <li ng-show="global.isLocal" class="dropdown text-normal nav-profile">
+                <a
+                    href="javascript:;"
+                    class="dropdown-toggle"
+                    id="menuAccountDropdown"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="true">
+
+                    <i class="fa fa-user"></i>
+                </a>
+
+                <!-- Account links -->
+                <div
+                    class="dropdown-menu with-arrow pull-left panel panel-default"
+                    aria-labelledby="menuAccountDropdown">
+
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <a href="#/account">
+                                <i class="fa fa-user color-info"></i>
+                                <span>My Account</span>
+                            </a>
+                        </li>
+                        <li class="list-group-item">
+                            <a ng-click="global.endSession()" href="javascript:;">
+                                <i class="fa fa-sign-out fa-fw"></i>
+                                <span>Log out</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
 		</ul>
 
         <ul class="nav-right list-unstyled">
@@ -30,6 +65,85 @@
                         config="config"
                         options="options">
                     </selectize>
+                </div>
+            </li>
+
+            <!-- Notifications -->
+            <li ng-show="global.isLocal" class="dropdown">
+                <a
+                    href="javascript:;"
+                    class="dropdown-toggle onboarding-general"
+                    id="menuAccountDropdown"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="true"
+                    data-intro="Whenever you do something in the app, it will show up as a notification here">
+
+                    <i class="fa fa-bell fa-fw"></i>
+                    <span>Notifications</span>
+                </a>
+
+                <div
+                    class="dropdown-menu with-arrow pull-right panel panel-default"
+                    aria-labelledby="menuNotificationsDropdown">
+
+                    <!-- Notifications header -->
+                    <div class="panel-heading">
+                        You have 2 notifications.
+                    </div>
+
+                    <!-- List of notifications -->
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <a href="javascript:;" class="media">
+                                <span class="pull-left media-icon">
+                                    <span class="circle-icon sm bg-success">
+                                        <i class="fa fa-bell-o"></i>
+                                    </span>
+                                </span>
+
+                                <div class="media-body">
+                                    <span class="block">New tasks needs to be done</span>
+                                    <span class="text-muted block">2min ago</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="javascript:;" class="media">
+                                <span class="pull-left media-icon">
+                                    <span class="circle-icon sm bg-info">
+                                        <i class="fa fa-bell-o"></i>
+                                    </span>
+                                </span>
+
+                                <div class="media-body">
+                                    <span class="block">Change your password</span>
+                                    <span class="text-muted">3 hours ago</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="javascript:;" class="media">
+                                <span class="pull-left media-icon">
+                                    <span class="circle-icon sm bg-danger">
+                                        <i class="fa fa-bell-o"></i>
+                                    </span>
+                                </span>
+
+                                <div class="media-body">
+                                    <span class="block">New feature added</span>
+                                    <span class="text-muted">9 hours ago</span>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+
+                    <!-- Notifications footer -->
+                    <div class="panel-footer">
+                        <a href="javascript:;">
+                            Show all notifications.
+                        </a>
+                    </div>
                 </div>
             </li>
 
