--- a/resources/assets/sass/partials/_navigation.scss
+++ b/resources/assets/sass/partials/_navigation.scss
@@ -786,51 +786,55 @@
   }
 }
 
-.top-header .logo {
-  position: absolute;
-  width: 100%;
-  height: 80px;
-  padding-left: 25px;
-  background-color: $orange;
-  color: #ffffff;
-  line-height: 80px;
-  text-align: left;
-}
+#nav-container {
 
-#nav-container .logo {
-    position: absolute;
-    width: 100%;
-    height: 80px;
-    padding-left: 20px;
-    // background-color: $heddokogreen;
-    background-color: $blue;
-    color: #fff;
-    line-height: 80px;
-    text-align: left;
-    padding: 10px 26px 26px 26px;
-}
+    .logo-container {
+        width:100%;height:100%;position:relative;
+    }
 
-.logo-container {
-  width:100%;height:100%;position:relative;
-}
+    .logo {
+        position: absolute;
+        width: 100%;
+        height: 80px;
+        padding-left: 20px;
+        background-color: $blue;
+        color: #fff;
+        line-height: 80px;
+        text-align: left;
+        padding: 10px 15px 30px;
+    }
 
-.logo1 {
-    // width:50px;
-    width: 40px;
-    left: 0;
-}
+    .logo1 {
+        // width:50px;
+        width: 30px;
+        left: 0;
+    }
 
-.logo2 {
-    // width: 75%;
-    width: 63%;
-    // right: 0;
-    right: 14%;
-}
+    .logo2 {
+        width: 55%;
+        right: 20%;
 
-.logo1, .logo2 {
-    height:auto;
-    position:absolute;
-    bottom:0;
+        .nav-min & {
+            display: none;
+        }
+    }
+
+    .logo1, .logo2 {
+        height:auto;
+        position:absolute;
+        bottom:0;
+    }
+
+    .app-version {
+        margin: 10px 0 0;
+        text-align: center;
+        font-size: 0.8em;
+        color: #aaa;
+
+        .nav-min & {
+            color: #888;
+        }
+    }
 }
 
 @media (min-width: 768px) {
