Updated styles for FMS screens

--- a/resources/assets/sass/partials/_containers.scss
+++ b/resources/assets/sass/partials/_containers.scss
@@ -203,6 +203,10 @@
     .table {
         background-color: #f3f3f3;
     }
+
+    &.table-striped > tbody > tr:nth-of-type(odd) {
+        background-color: $blue;
+    }
 }
 
 
