--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -34,6 +34,15 @@
         margin: 0 0 0 20px;
         font-size: 1.2em;
         letter-spacing: 1.2px;
+
+        .h1-append-sub {
+            position: absolute;
+            font-size: .7em;
+
+            a {
+                font-weight: normal;
+            }
+        }
     }
 
     .btn-toolbar.pull-right {
