Working on FMS screens

--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -35,13 +35,8 @@
         font-size: 1.2em;
         letter-spacing: 1.2px;
 
-        .h1-append-sub {
-            position: absolute;
+        small {
             font-size: .7em;
-
-            a {
-                font-weight: normal;
-            }
         }
     }
 
