--- a/resources/assets/sass/partials/_containers.scss
+++ b/resources/assets/sass/partials/_containers.scss
@@ -191,6 +191,11 @@
 .table {
     max-width: 100%;
 
+    thead {
+        margin-bottom: 15px;
+        border-bottom: 1px solid #444;
+    }
+
     & > thead > tr > th,
     & > thead > tr > td,
     & > tbody > tr > th,
@@ -198,6 +203,7 @@
     & > tfoot > tr > th,
     & > tfoot > tr > td {
         padding: 10px;
+        border-top: none;
     }
 
     .table {
