Improved avatar uploads

--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -117,17 +117,17 @@
         </li>
 
         <!-- Submit FMS test form -->
-		<li>
+		<li ng-show="false">
             <a href="#/fmstest"><span>submit fms test results</span></a>
         </li>
 
         <!-- FMS results page -->
-		<li>
+		<li ng-show="false">
             <a href="#/fmsresults"><span>fms results</span></a>
 		</li>
 
         <!-- Live FMS pages. -->
-        <li>
+        <li ng-show="false">
             <!-- TODO: Call this Live FMS? -->
             <a href="#/fms/live"> <i class="fa fa-pencil-square-o"></i> Movement Screen</a>
 
