--- a/resources/assets/sass/directives/ui-page-title.scss
+++ b/resources/assets/sass/directives/ui-page-title.scss
@@ -1,6 +1,8 @@
 /**
  * Copyright Heddoko(TM) 2015, all rights reserved.
  *
+ * @brief       Styles for uiPageTitle
+ * @author      Francis Amankrah (frank@heddoko.com)
  */
 
 .ui-page-title-background {
