--- a/resources/assets/sass/directives/ui-taggable.scss
+++ b/resources/assets/sass/directives/ui-taggable.scss
@@ -1,4 +1,6 @@
 /**
  * Copyright Heddoko(TM) 2015, all rights reserved.
  *
+ * @brief       Styles for uiTaggable
+ * @author      Francis Amankrah (frank@heddoko.com)
  */
