--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -27,6 +27,7 @@
 @import 'partials/_pie-charts.scss';
 
 /* Directives */
+@import 'directives/ui-avatar.scss';
 @import 'directives/ui-editable-fields.scss';
 @import 'directives/ui-movement.scss';
 @import 'directives/ui-page-title.scss';
