--- a/resources/assets/sass/directives/ui-editable-fields.scss
+++ b/resources/assets/sass/directives/ui-editable-fields.scss
@@ -1,6 +1,8 @@
 /**
  * Copyright Heddoko(TM) 2015, all rights reserved.
  *
+ * @brief       Styles for uiEditableFields
+ * @author      Francis Amankrah (frank@heddoko.com)
  */
 
 .ui-editable-field-value .edit-icon {
