--- a/resources/assets/sass/directives/ui-movement.scss
+++ b/resources/assets/sass/directives/ui-movement.scss
@@ -1,6 +1,8 @@
 /**
  * Copyright Heddoko(TM) 2015, all rights reserved.
  *
+ * @brief       Styles for uiMovement
+ * @author      Francis Amankrah (frank@heddoko.com)
  */
 
 .ui-movement-container {
