--- a/resources/assets/sass/partials/_containers.scss
+++ b/resources/assets/sass/partials/_containers.scss
@@ -9,6 +9,12 @@
 
 /*
  * Aspect ratios
+ *
+ *    <div class="aspect-ratio">
+ *        <div>
+ *            Your content here...
+ *        </div>
+ *    </div>
  */
 .aspect-ratio {
     position: relative;
@@ -43,6 +49,7 @@
  */
 .active-element {
     position: relative;
+    display: inline-block;
     background-color: #fff;
     @include box-shadow(1px 1px 2px rgba(0, 0, 0, 0.2));
 }
