--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -43,6 +43,14 @@
     .btn-toolbar.pull-right {
         margin: 20px auto;
     }
+
+    .sub-header {
+        margin: 10px 0;
+
+        .sub-header-btn {
+            margin: 0 10px 0 0;
+        }
+    }
 }
 
 /*
