Updates to profile controller on API and in Angular

--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -205,7 +205,7 @@
         <!-- Account page -->
 		<li>
             <a href="#/account">
-                <i class="fa fa-users"></i>
+                <i class="fa fa-user"></i>
                 <span>My Account</span>
             </a>
         </li>
