Added analysis demo

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -25,6 +25,7 @@
 @import 'partials/_ribbons.scss';
 @import 'partials/_charts.bak.scss';
 @import 'partials/_pie-charts.scss';
+@import 'partials/__dev.scss';
 
 /* Directives */
 @import 'directives/ui-avatar.scss';
