Added demo live capture

--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -103,11 +103,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#/capture">
+                    <a href="#/capture/demo">
                         <i class="fa fa-angle-right"></i>
                         <span>Record</span>
                     </a>
                 </li>
+                <!-- <li>
+                    <a href="#/capture">
+                        <i class="fa fa-angle-right"></i>
+                        <span>Record</span>
+                    </a>
+                </li> -->
                 <li>
                     <a href="#/movements/upload">
                         <i class="fa fa-angle-right"></i>
