--- a/resources/assets/sass/partials/_variables.scss
+++ b/resources/assets/sass/partials/_variables.scss
@@ -13,7 +13,8 @@ $light-gray: #c1bfc0;
 $yellow: #fef9d9;
 $dark-brown: #503f3c;
 $warning:#eec95a;
-$danger: #C05F44;
+// $danger: #C05F44;
+$danger: #db5031;
 $info-alt: #8170ca;
 $heddokogreen: #3bd6b2;
 $silver: #cbd4e3;
