--- a/resources/assets/sass/partials/_panels-modal-tooltips.scss
+++ b/resources/assets/sass/partials/_panels-modal-tooltips.scss
@@ -264,34 +264,38 @@
 }
 
 .modal-content {
-  background-color: #fff;
-  border: 1px solid #999;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  @include border-radius(0px);
-  @include box-shadow(0 3px 9px rgba(0, 0, 0, 0.5));
+    // background-color: #fff;
+    background-color: $blue-dark;
+    color: $text-color;
+    border: 1px solid #999;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    @include border-radius(0px);
+    // @include box-shadow(0 3px 9px rgba(0, 0, 0, 0.5));
+    @include box-shadow(0 3px 9px rgba(50, 50, 50, 0.5));
+
+    .modal-header {
+        border-bottom: none;
+    }
+
+    .modal-body {
+        position: relative;
+        padding: 20px;
+    }
+
+    .modal-footer {
+        padding: 20px;
+        border-top-color: $blue;
+    }
+
+    .modal-footer:before, .modal-footer:after {
+        content: " ";
+        display: table;
+    }
+
+    .modal-footer:after {
+        clear: both;
+    }
 }
-
-
-.modal-body {
-  position: relative;
-  padding: 20px;
-}
-
-
-.modal-footer {
-  padding: 20px;
-}
-
-
-.modal-footer:before, .modal-footer:after {
-  content: " ";
-  display: table;
-}
-
-.modal-footer:after {
-  clear: both;
-}
-
 
 .tooltip-inner {
   max-width: 200px;
