--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -53,6 +53,10 @@
     }
 }
 
+h1.title, h2.title {
+
+}
+
 /*
  * Angular - Import pages.
  */
@@ -80,6 +84,17 @@
  */
 .movements-page .active-element {
     margin: 20px auto;
+}
+
+/*
+ * Angular - Profile pages.
+ */
+.profile-page {
+    .profile-avatar {
+        display: inline-block;
+        height: 345px;
+        width: 345px;
+    }
 }
 
 /*
